src/styles/blocks/_instruments.scss
.instruments-item {
    display: flex;
    flex-direction: column;
    width: 384px;

    margin-inline: auto;

    &__images {
        width: 100%;
        display: flex;
        flex-direction: row;
        border-radius: 10px;

        margin-bottom: 11.45px;

        &-item {
            width: auto;
            height: 154px;
        }

        &-item:first-child {
            border-radius: 10px 0 0 10px;
        }

        &-item:last-child {
            border-radius: 0 10px 10px 0;
        }
    }

    &__title {
        font-size: var(--sds-typography-body-size-medium);
        font-style: normal;
        font-weight: 700;
        line-height: 100%; /* 16px */

        color: #FCFCFC;

        display: inline-flex;
        column-gap: 5px;

        align-items: center;
        margin-bottom: 6.5px;
    }

    &__description {
        color: #707177;

        /* body 2 */
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 130%; /* 18.2px */
    }
}

.instruments {
    &__heading {
        padding: 26px 0;
    }

    &__description {
        font-size: var(--sds-typography-body-size-medium);
        font-style: normal;
        font-weight: var(--sds-typography-body-font-weight-regular);
        line-height: 130%; /* 20.8px */

        text-align: center;
        margin-bottom: 101px;
    }

    &__grid {
        display: grid; 
        grid-template-columns: repeat(auto-fit,minmax(384px,1fr));
        gap: 50px 142px;
        width: 100%;
        margin-bottom: 153px;
    }
}

